# bread

./: Cargo.toml  README.md  Rocket.toml  api_def.md
src/: database.rs  main.rs
src/api/: debug.rs  mod.rs  token.rs
src/app/: mod.rs
src/database/: mod.rs
src/models/: post.rs  user.rs
static/css/: app.css  landing.css  main.css
static/scss/: _buttons.scss  _default.scss  _font.scss  _forms.scss  app.scss  landing.scss  main.scss
templates/: landing.html.tera  login.html.tera  register.html.tera
templates/app/: create-post.html.tera  create_post.html.tera  friends.html.tera  profile.html.tera  random.html.tera
templates/template/: app.html.tera  base.html.tera
