[package]
name = "bread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
mongodb = { version = "2.4.0", default-features = false, features = ["sync"] }
password-hash = "0.5.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rust-argon2 = "1.0"
serde = "1.0.154"